samples/_failures_safe/1761005064_ae16b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebcfb5f4.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_ebcfb5f4.c:153:37: error: missing terminating " character
  153 |         case TOKEN_OPERATOR: printf("OPERATOR
      |                                     ^~~~~~~~~
./samples/SAFE/__tmp_ebcfb5f4.c:153:9: error: expected expression at end of input
  153 |         case TOKEN_OPERATOR: printf("OPERATOR
      |         ^~~~
./samples/SAFE/__tmp_ebcfb5f4.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebcfb5f4.c:153:9: error: expected declaration or statement at end of input
